Add Login and Admin page for news

--- a/TTV48Schmalkalden/appsettings.json
+++ b/TTV48Schmalkalden/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "TTVConnection": "Data Source=81.27.105.170;Initial Catalog=db_ttv_dweder;User ID=u_ttv_dweder;Password=DominikWeder_97;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "Salt": {
+    "UserSalt": "sIBRq9bmEaWZ/zq2/jDKFw=="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
