--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Compile Remove="Migrations\20190926143017_Add Category.cs" />
+    <Compile Remove="Migrations\20190930170920_Add Fullname to User.cs" />
   </ItemGroup>
 
   <ItemGroup>
