--- a/TTV48Schmalkalden/TTV48Schmalkalden.csproj
+++ b/TTV48Schmalkalden/TTV48Schmalkalden.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
