--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+/TTV48Schmalkalden/wwwroot/images/news/*
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
