--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 *.user
 *.userosscache
 *.sln.docstates
-/TTV48Schmalkalden/wwwroot/images/news/*
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -26,7 +25,7 @@ bld/
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
-#wwwroot/
+wwwroot/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
