--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ bld/
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
-wwwroot/
+wwwroot/assets/images/news
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
@@ -53,6 +53,7 @@ artifacts/
 *.meta
 *.obj
 *.pch
+*.png
 *.pdb
 *.pgc
 *.pgd
